config/firewall/rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT

-A INPUT -p tcp --dport 22 -j ACCEPT

-A INPUT -p udp --dport 137 -j ACCEPT

-A INPUT -p udp --dport 138 -j ACCEPT

-A INPUT -p tcp --dport 139 -j ACCEPT

-A INPUT -p tcp --dport 445 -j ACCEPT

-A INPUT -p tcp --dport 8085 -j ACCEPT

-A INPUT -p tcp --match multiport --dports 6881:6891 -j ACCEPT
-A INPUT -p udp --match multiport --dports 6881:6891 -j ACCEPT

-A INPUT -p udp --dport 34197 -j ACCEPT
-A INPUT -p udp --dport 10000:60000 -j ACCEPT

-A INPUT -p tcp --match multiport --dports 3128,9666 -j ACCEPT

-A FORWARD -i docker0 -j ACCEPT
-A FORWARD -o docker0 -j ACCEPT
-A FORWARD -i br-+ -j ACCEPT
-A FORWARD -o br-+ -j ACCEPT

-A FORWARD -i eth+ -o eth+ -j ACCEPT

-A INPUT -p tcp --dport 8085 -m connlimit --connlimit-above 5 --connlimit-mask 32 -j DROP
-A INPUT -p tcp --dport 8085 -m recent --name qbt_webui --update --seconds 60 --hitcount 10 -j DROP
-A INPUT -p tcp --dport 8085 -m recent --name qbt_webui --set

COMMIT

*nat
-A POSTROUTING -o eth+ -j MASQUERADE

-A PREROUTING -i eth3 -p tcp --dport 6881 -j DNAT --to-destination 192.168.0.100:6881
-A PREROUTING -i eth3 -p udp --dport 34197 -j DNAT --to-destination 192.168.0.100:34197

COMMIT
